# aws_ses

./: README.md  pyproject.toml
examples/: sample_usage.py
src/aws_ses/: cli.py  lambda_handler.py  profile_manager.py  ses_client.py
tests/: test_lambda_handler.py  test_profile_manager.py  test_ses_client.py
